[gd_scene load_steps=8 format=2]

[ext_resource path="res://Szenen/FlowQuestion.gd" type="Script" id=1]
[ext_resource path="res://Grafik/Assets/GUI/particle2.png" type="Texture" id=2]
[ext_resource path="res://Grafik/Assets/GUI/particle.png" type="Texture" id=3]
[ext_resource path="res://Grafik/Assets/GUI/flows.png" type="Texture" id=4]
[ext_resource path="res://Szenen/OG/star.gd" type="Script" id=6]
[ext_resource path="res://Grafik/Assets/GUI/OKButton.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FlowQuestion" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -104.0
margin_top = -133.0
margin_right = 102.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
text = "Sind die Fragen ....?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Control" parent="Sprite"]
visible = false
margin_left = -23.0
margin_top = 96.169
margin_right = 23.0
margin_bottom = 121.169
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Sprite/ok"]
position = Vector2( 24.4155, 12.1119 )
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="Sprite/ok"]
margin_left = -62.9046
margin_top = 2.02189
margin_right = 111.095
margin_bottom = 30.0219
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ja" type="Label" parent="Sprite"]
margin_left = -115.0
margin_top = 26.0
margin_right = -16.0
margin_bottom = 45.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
text = "Trifft nicht zu"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="nein" type="Label" parent="Sprite"]
margin_left = 52.0
margin_top = 26.0
margin_right = 116.0
margin_bottom = 45.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0, 0.188235, 0.227451, 1 )
text = "Trifft zu"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="stars" type="Node2D" parent="."]
position = Vector2( -1, -25 )

[node name="Sprite" type="TextureRect" parent="stars"]
margin_left = -86.1903
margin_top = 68.7893
margin_right = -36.1903
margin_bottom = 118.789
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Sprite" parent="stars/Sprite"]
visible = false
position = Vector2( 25.5, 25.5 )
texture = ExtResource( 3 )

[node name="Sprite2" type="TextureRect" parent="stars"]
margin_left = -51.1903
margin_top = 68.7893
margin_right = -1.19034
margin_bottom = 118.789
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Sprite" parent="stars/Sprite2"]
visible = false
position = Vector2( 25.5, 25.5 )
texture = ExtResource( 3 )

[node name="Sprite3" type="TextureRect" parent="stars"]
margin_left = -16.1903
margin_top = 68.7893
margin_right = 33.8097
margin_bottom = 118.789
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Sprite" parent="stars/Sprite3"]
visible = false
position = Vector2( 25.5, 25.5 )
texture = ExtResource( 3 )

[node name="Sprite4" type="TextureRect" parent="stars"]
margin_left = 18.8097
margin_top = 68.7893
margin_right = 68.8097
margin_bottom = 118.789
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Sprite" parent="stars/Sprite4"]
visible = false
position = Vector2( 25.5, 25.5 )
texture = ExtResource( 3 )

[node name="Sprite5" type="TextureRect" parent="stars"]
margin_left = 53.8097
margin_top = 68.7893
margin_right = 103.81
margin_bottom = 118.789
rect_scale = Vector2( 0.7, 0.7 )
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Sprite" parent="stars/Sprite5"]
visible = false
position = Vector2( 25.5, 25.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 2 )

[connection signal="gui_input" from="Sprite/ok" to="." method="_on_ok_gui_input"]
[connection signal="mouse_entered" from="Sprite/ok" to="." method="_on_ok_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/ok" to="." method="_on_ok_mouse_exited"]
[connection signal="gui_input" from="stars/Sprite" to="stars/Sprite" method="_on_Sprite_gui_input"]
[connection signal="gui_input" from="stars/Sprite2" to="stars/Sprite2" method="_on_Sprite_gui_input"]
[connection signal="gui_input" from="stars/Sprite3" to="stars/Sprite3" method="_on_Sprite_gui_input"]
[connection signal="gui_input" from="stars/Sprite4" to="stars/Sprite4" method="_on_Sprite_gui_input"]
[connection signal="gui_input" from="stars/Sprite5" to="stars/Sprite5" method="_on_Sprite_gui_input"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
